build: made checkbox, fixed z-index and positioning of filter, added query params

--- a/src/widgets/Hero/HeroHome/HeroHome.module.scss
+++ b/src/widgets/Hero/HeroHome/HeroHome.module.scss
@@ -117,14 +117,14 @@ $colorGray350: #ccc; // Assuming this is a valid color
   }
   &Filter {
     position: absolute;
-    bottom: -7%;
-    left: 2%;
-    right: 2%;
+    bottom: -50px;
+    left: 0;
+    right: 0;
     @include tablet {
-      bottom: -16%;
+      bottom: -90px;
     }
     @include mobile {
-      margin-top: 52px;
+      margin-top: 50px;
       position: static;
     }
   }
